tests/NormalTests/paczka1/fuzzy1/61273508.err
Error in line 5: A845 A276 87,8
Error in line 2: YvliKgu A845 2,5
Error in line 14: A845 A330 77,0
Error in line 15: 4FTnSLb S45 38,2
Error in line 17: YvliKgu A276 98,3
Error in line 21: YvliKgu A330 70,3
Error in line 28: 4FTnSLb A276 40,4
Error in line 37: 4FTnSLb A845 95,50
Error in line 35: 4FTnSLb A330 27,5
